{
    "name": "PlayerInputController",
    "maps": [
        {
            "name": "Player",
            "id": "076e8029-9d3d-4f50-befa-227145f0a124",
            "actions": [
                {
                    "name": "ClickMove",
                    "type": "Button",
                    "id": "c9cae660-9a60-49d6-a43f-748c7581873b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeyMove",
                    "type": "Value",
                    "id": "2d03908e-0a4c-4bf3-8b77-a0bf3b0738b0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "934a3f19-586d-47e4-bdab-97199ecab01b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "259d2586-62fb-4686-ab3b-38eee1dc4e11",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "6f1cdda9-d5b0-4964-8c8e-fdbfec7d5ea7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "950a7130-7b42-4861-b9fd-94ef8ca06c4c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fa12d57e-34f3-4be3-af12-03872287c264",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5651bf21-79cb-46fb-b6af-2a4400ed6bb9",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c8d21cb6-bb99-40c3-b13c-072fa2225cf8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KeyMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "130ed024-e620-4ed8-92b9-3d4739964953",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}